platform/runtime/staging/import_legacy/latest/exam_integration/bounded_probe/runtime/traces/probe.exams-curated-exam_final-v1.exams-examfinal-volume_cube/user.out.build.stderr
/home/xapet/Desktop/f/platform/runtime/staging/import_legacy/latest/exam_integration/bounded_probe/runtime/workspaces/probe.exams-curated-exam_final-v1.exams-examfinal-volume_cube/submission/volume_cube.c: In function 'volume_cube':
/home/xapet/Desktop/f/platform/runtime/staging/import_legacy/latest/exam_integration/bounded_probe/runtime/workspaces/probe.exams-curated-exam_final-v1.exams-examfinal-volume_cube/submission/volume_cube.c:2:23: error: expected ';' before '}' token
    2 |     return (a * a * a)
      |                       ^
      |                       ;
    3 | }
      | ~                      
